finished my bots plus bonuses

--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,21 @@
 .ui.grid {
   padding: 0px 20px;
 }
+
+#filter {
+  text-align: center;
+  vertical-align: middle;
+  line-height: 50px;
+}
+
+#sort {
+  text-align: center;
+  vertical-align: middle;
+  line-height: 50px;
+}
+
+#search {
+  text-align: center;
+  vertical-align: middle;
+  line-height: 50px;
+}
